# subfoundit

./: Cargo.toml  README.md
src/: error.rs  main.rs  model.rs
src/engine/: mod.rs  monitor.rs  recursive.rs  reporter.rs
src/modules/: mod.rs
src/modules/dns/: bruteforce.rs  misconfig.rs  mod.rs  permutation.rs  resolver.rs  wildcard.rs
src/modules/passive/: crtsh.rs
src/modules/specialized/: asn.rs  buckets.rs  ctstream.rs  mod.rs  takeover.rs
src/modules/web/: mod.rs  probe.rs  vhost.rs
